--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
     <body class="body">
-        <h1 class='h1'>hello obama</h1>
+      <h1 class='h1'>hello obama</h1>
+      <div class="mp">
         <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Email address</label>
             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
@@ -12,6 +14,8 @@
             <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
           </div>
+        </div>
+      </div>
         <p class='obama'><img src="https://w7.pngwing.com/pngs/956/531/png-transparent-barack-obama-president-of-the-united-states-barack-obama.png" alt="obama"></p>
     </body>
 </html>
